# pdf-suite

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app.pyw  build_windows.ps1  maintenance_tasks.md  pyproject.toml  requirements.txt  run_pdf_suite.bat  technical_documentation.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
core/: engine.py  session.py  version.py
docs/: technical_documentation.md
scripts/: build_windows.ps1  generate_sample_form.py
tests/: test_complete_workflow.py  test_engine_forms.py  test_engine_signatures.py  test_layout.py  visual_smoke.ps1
ui/: canvas.py  layout.py  main_window.py  menu_bar.py  sidebar.py  tooltip.py  window_style.py
utils/: math_tools.py
