[project]
name = "pdf-suite"
version = "1.1.0"
description = "Local Windows desktop application for reviewing and organizing PDF documents"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "pymupdf>=1.23.0",
]

[dependency-groups]
build = [
    "pyinstaller>=6.0.0",
]

[tool.uv]
package = false
